--- a/client/.env
+++ b/client/.env
@@ -1,1 +1,2 @@
-VITE_ADMIN_URL = "http://localhost:8000"
+// VITE_ADMIN_URL = "http://localhost:8000"
+VITE_ADMIN_URL = "https://gym-management-system-ctlg.onrender.com"
